Fixes issues with footer spacing on cart page

--- a/components/Layout/layout.module.scss
+++ b/components/Layout/layout.module.scss
@@ -2,6 +2,7 @@
 .main {
     display: flex;
     flex-direction: column;
+    min-height: 100vh;
 }
 .hero {
     width:100%;
